Fixed spacing issues on about/project section, changed colours for text and added new colour variables

--- a/styles/sass/partials/_about.scss
+++ b/styles/sass/partials/_about.scss
@@ -1,42 +1,7 @@
 .aboutMe {
     background: linear-gradient(to bottom, #181818, #34231B);
     position: relative;
-    padding: 175px 0;
-
-    .fossilOneContainer {
-        position: absolute;
-        top: 20%;
-        left: 2%;
-        height: 70px;
-        width: 70px;
-
-        img {
-            width: 100%;
-            height: 100%;
-            display: block;
-            filter: brightness(70%);
-        }
-    }
-
-    .fossilTwoContainer {
-        position: absolute;
-        transform:rotate(30deg);
-        top: 40%;
-        right: 2%;
-        height: 70px;
-        width: 70px;
-        
-        img {
-            width: 100%;
-            height: 100%;
-            display: block;
-            filter: brightness(90%);
-        }
-    }
-
-    .promo {
-        margin-top: 20px;
-    }
+    padding: 125px 0 50px 0;
 
     .aboutOverallContainer {
         position: relative;
@@ -59,8 +24,8 @@
         flex-direction: column;
         justify-content: center;
 
-        .aboutParagraphMiddle {
-            margin: 30px 0px 20px 0;
+        .aboutParagraphFirst {
+            margin: 55px 0px 25px 0;
         }
     }
 
@@ -70,6 +35,10 @@
 
     .aboutContent {
         width: 40%;
+    }
+
+    .promo {
+        margin-top: 20px;
     }
 
     .selfieContainer {
@@ -110,6 +79,37 @@
                 left: 50%;
                 transform: translate(-50%, 50%);
             }
+        }
+    }
+
+    .fossilOneContainer {
+        position: absolute;
+        top: 20%;
+        left: 2%;
+        height: 70px;
+        width: 70px;
+
+        img {
+            width: 100%;
+            height: 100%;
+            display: block;
+            filter: brightness(70%);
+        }
+    }
+
+    .fossilTwoContainer {
+        position: absolute;
+        transform: rotate(30deg);
+        top: 40%;
+        right: 2%;
+        height: 70px;
+        width: 70px;
+
+        img {
+            width: 100%;
+            height: 100%;
+            display: block;
+            filter: brightness(90%);
         }
     }
 }
