--- a/styles/sass/partials/_variables.scss
+++ b/styles/sass/partials/_variables.scss
@@ -7,5 +7,7 @@ $primary: #232946;
 $secondary: #403976;
 $tertiary: #fffffe;
 $quaternary: #2a1f7a;
-$quinary: #b8c1ec;
+$quinary: #7472EC;
 $senary: #3E3CAF;
+$paragraph-color: #D7D7F2;
+$aside: #B7B7B7;
