--- a/styles/style.css
+++ b/styles/style.css
@@ -316,12 +316,14 @@ h1 {
   font-size: 1.5rem;
   text-align: center;
   text-transform: capitalize;
+  line-height: 40px;
 }
 
 h2 {
   font-size: 1.3rem;
   text-transform: capitalize;
-  color: #b8c1ec;
+  line-height: 35px;
+  color: #7472EC;
 }
 
 h3 {
@@ -330,6 +332,8 @@ h3 {
 
 p {
   font-size: 1.3rem;
+  letter-spacing: 0.5px;
+  color: #D7D7F2;
 }
 
 nav li {
@@ -350,6 +354,10 @@ header h2 {
   text-transform: uppercase;
   color: #fffffe;
   font-size: 1.1rem;
+}
+
+.promo {
+  color: #B7B7B7;
 }
 
 body {
@@ -507,8 +515,8 @@ header .headerContent .arrowImageContainer img {
   display: block;
   -o-object-fit: cover;
      object-fit: cover;
-  -webkit-filter: brightness(90%);
-          filter: brightness(90%);
+  -webkit-filter: brightness(80%);
+          filter: brightness(80%);
 }
 
 .cloudImageContainerTwo {
@@ -526,8 +534,8 @@ header .headerContent .arrowImageContainer img {
      object-fit: cover;
   -webkit-transform: scaleX(-1);
           transform: scaleX(-1);
-  -webkit-filter: brightness(90%);
-          filter: brightness(90%);
+  -webkit-filter: brightness(80%);
+          filter: brightness(80%);
 }
 
 .skylineBackground {
@@ -545,40 +553,7 @@ header .headerContent .arrowImageContainer img {
   background: -webkit-gradient(linear, left top, left bottom, from(#181818), to(#34231B));
   background: linear-gradient(to bottom, #181818, #34231B);
   position: relative;
-  padding: 175px 0;
-}
-.aboutMe .fossilOneContainer {
-  position: absolute;
-  top: 20%;
-  left: 2%;
-  height: 70px;
-  width: 70px;
-}
-.aboutMe .fossilOneContainer img {
-  width: 100%;
-  height: 100%;
-  display: block;
-  -webkit-filter: brightness(70%);
-          filter: brightness(70%);
-}
-.aboutMe .fossilTwoContainer {
-  position: absolute;
-  -webkit-transform: rotate(30deg);
-          transform: rotate(30deg);
-  top: 40%;
-  right: 2%;
-  height: 70px;
-  width: 70px;
-}
-.aboutMe .fossilTwoContainer img {
-  width: 100%;
-  height: 100%;
-  display: block;
-  -webkit-filter: brightness(90%);
-          filter: brightness(90%);
-}
-.aboutMe .promo {
-  margin-top: 20px;
+  padding: 125px 0 50px 0;
 }
 .aboutMe .aboutOverallContainer {
   position: relative;
@@ -607,14 +582,17 @@ header .headerContent .arrowImageContainer img {
       -ms-flex-pack: center;
           justify-content: center;
 }
-.aboutMe .aboutText .aboutParagraphMiddle {
-  margin: 30px 0px 20px 0;
+.aboutMe .aboutText .aboutParagraphFirst {
+  margin: 55px 0px 25px 0;
 }
 .aboutMe .aboutContainer {
   width: calc(100% - 20px);
 }
 .aboutMe .aboutContent {
   width: 40%;
+}
+.aboutMe .promo {
+  margin-top: 20px;
 }
 .aboutMe .selfieContainer {
   height: 100%;
@@ -660,10 +638,40 @@ header .headerContent .arrowImageContainer img {
   -webkit-transform: translate(-50%, 50%);
           transform: translate(-50%, 50%);
 }
+.aboutMe .fossilOneContainer {
+  position: absolute;
+  top: 20%;
+  left: 2%;
+  height: 70px;
+  width: 70px;
+}
+.aboutMe .fossilOneContainer img {
+  width: 100%;
+  height: 100%;
+  display: block;
+  -webkit-filter: brightness(70%);
+          filter: brightness(70%);
+}
+.aboutMe .fossilTwoContainer {
+  position: absolute;
+  -webkit-transform: rotate(30deg);
+          transform: rotate(30deg);
+  top: 40%;
+  right: 2%;
+  height: 70px;
+  width: 70px;
+}
+.aboutMe .fossilTwoContainer img {
+  width: 100%;
+  height: 100%;
+  display: block;
+  -webkit-filter: brightness(90%);
+          filter: brightness(90%);
+}
 
 .myProjects {
-  background: url("../assets/cave.png"), #151F28;
-  padding: 200px 0 125px 0;
+  background: url("../assets/cave.png"), rgba(33, 27, 22, 0.9215686275);
+  padding: 225px 0 125px 0;
   background-repeat: repeat-x;
 }
 .myProjects .projectText {
@@ -681,6 +689,9 @@ header .headerContent .arrowImageContainer img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+.myProjects .projectText p {
+  margin: 35px 0 25px 0;
 }
 .myProjects .projectInfo {
   display: -webkit-box;
